Moved Ratings-Folder to Main Project.
This makes more sense, since it´s just too much to use an extra library for just one class.
Also changed the interface IRatingScheme and the implementation of that and the corresponding UnitTests

--- a/GradeBook/GradeBook.Tests/GradeBook.Tests.csproj
+++ b/GradeBook/GradeBook.Tests/GradeBook.Tests.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ratings\RatingSchemeTest.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -61,6 +62,12 @@
   <ItemGroup>
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GradeBook\GradeBook.csproj">
+      <Project>{c2f814b2-6d28-405d-95ad-5fac78681b91}</Project>
+      <Name>GradeBook</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
