Introduced Base Library
Moved MVVM Base to Base Library
Added XmlSerializer and XmlDeserializer to Base Library
Added Tests to Base Library for XmlSerializer and XmlDeserializer

--- a/GradeBook/GradeBook/GradeBook.csproj
+++ b/GradeBook/GradeBook/GradeBook.csproj
@@ -55,12 +55,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Base\MVVM\IMessageBoxService.cs" />
-    <Compile Include="Base\MVVM\MessageBoxService.cs" />
-    <Compile Include="Base\MVVM\RelayCommand.cs" />
-    <Compile Include="MVVM\Model\GradeRatingModel.cs" />
-    <Compile Include="MVVM\Model\ProblemModel.cs" />
-    <Compile Include="MVVM\Model\RatingModel.cs" />
+    <Compile Include="MVVM\Model\Rating\GradeRatingModel.cs" />
+    <Compile Include="MVVM\Model\Rating\ProblemModel.cs" />
+    <Compile Include="MVVM\Model\Rating\RatingModel.cs" />
     <Compile Include="MVVM\ViewModel\GradingViewModel.cs" />
     <Compile Include="MVVM\ViewModel\MainWindowViewModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
@@ -76,7 +73,6 @@
     <Compile Include="Ratings\Contracts\IRatingScheme.cs" />
     <Compile Include="Ratings\Contracts\IGrading.cs" />
     <Compile Include="Ratings\RatingScheme.cs" />
-    <Compile Include="Base\MVVM\ViewModelBase.cs" />
     <Compile Include="MVVM\ViewModel\RatingViewModel.cs" />
     <Compile Include="MVVM\ViewModel\StatisticViewModel.cs" />
     <Compile Include="MVVM\ViewModel\StudentsViewModel.cs" />
@@ -127,6 +123,11 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Base\Base.csproj">
+      <Project>{0EEEC755-BAE4-4A38-8C4A-316FE29B4815}</Project>
+      <Name>Base</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
