--- a/GradeBook/GradeBook/packages.config
+++ b/GradeBook/GradeBook/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net471" developmentDependency="true" />
+  <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net471" />
+  <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net471" />
 </packages>
