Added Functionality for StudentsView and StudentsViewModel

--- a/GradeBook/GradeBook.Wpf/GradeBook.Wpf.csproj
+++ b/GradeBook/GradeBook.Wpf/GradeBook.Wpf.csproj
@@ -120,5 +120,8 @@
       <Name>GradeBook.Rating</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MVVM\Model\Students\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
