--- a/GradeBook/GradeBook.Rating/GradeBook.Rating.csproj
+++ b/GradeBook/GradeBook.Rating/GradeBook.Rating.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\DTOs\ExamRatingDTO.cs" />
+    <Compile Include="Contracts\DTOs\GradeRatingDTO.cs" />
+    <Compile Include="Contracts\DTOs\ProblemDTO.cs" />
+    <Compile Include="Contracts\RatingSchemeModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Contracts\DTOs\GradingDTO.cs" />
     <Compile Include="Contracts\DTOs\RatingSchemeDTO.cs" />
