Added ShowErrorMessage to IMessageBoxService. Added datagrid with dynamically changeable columns to GradeView
For Implementation of DataGrid with changeable columns see: https://blogs.msmvps.com/deborahk/populating-a-datagrid-with-dynamic-columns-in-a-silverlight-application-using-mvvm/

--- a/GradeBook/GradeBook.Wpf/GradeBook.Wpf.csproj
+++ b/GradeBook/GradeBook.Wpf/GradeBook.Wpf.csproj
@@ -53,7 +53,7 @@
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MVVM\Model\ExamGradingDTO.cs" />
+    <Compile Include="MVVM\Model\GradingModel.cs" />
     <Compile Include="MVVM\ViewModel\GradingViewModel.cs" />
     <Compile Include="MVVM\ViewModel\MainWindowViewModel.cs" />
     <Compile Include="MVVM\ViewModel\RatingViewModel.cs" />
