--- a/GradeBook/GradeBook.Wpf/packages.config
+++ b/GradeBook/GradeBook.Wpf/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net471" developmentDependency="true" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net471" />
+  <package id="WindowsAPICodePack-Core" version="1.1" targetFramework="net471" />
+  <package id="WindowsAPICodePack-Shell" version="1.1" targetFramework="net471" />
 </packages>
