Changed the usage of the ObservableDictionary to a List<StatisticModel> in order to visualize the Amount of Grades and Percentage correctly

--- a/GradeBook/GradeBook.Wpf/GradeBook.Wpf.csproj
+++ b/GradeBook/GradeBook.Wpf/GradeBook.Wpf.csproj
@@ -66,7 +66,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="MVVM\Model\GradingModel.cs" />
-    <Compile Include="MVVM\Model\GradingNumbers.cs" />
+    <Compile Include="MVVM\Model\StatisticModel.cs" />
     <Compile Include="MVVM\ViewModel\GradingViewModel.cs" />
     <Compile Include="MVVM\ViewModel\MainWindowViewModel.cs" />
     <Compile Include="MVVM\ViewModel\RatingViewModel.cs" />
